--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Robotics and more"
 email: adiazpolo17@correo.unicordoba.edu.co
 timezone: UTC
-baseurl: "/affiliates-jekyll-theme"
+baseurl: ""
 permalink: "/:title/"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
